--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "discord.js": "^11.5.1",
     "enmap": "^5.2.4",
     "eventhandler": "^2.1.0",
+    "express": "^4.17.1",
     "mathjs": "^6.2.3",
     "node-gyp": "^6.0.1",
     "superagent": "^5.1.0"
