--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eventhandler": "^2.1.0",
     "express": "^4.17.1",
     "mathjs": "^6.2.3",
+    "mongodb": "^3.5.8",
     "node-gyp": "^6.0.1",
     "superagent": "^5.1.0"
   }
