--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,15 @@ aiohttp==3.6.2
 async-timeout==3.0.1
 attrs==19.3.0
 chardet==3.0.4
-dnspython==1.16.0
 discord
-discord.py
+discord.py==1.3.3
+dnspython==1.16.0
 et-xmlfile==1.0.1
 idna==2.9
 idna-ssl==1.1.0
 jdcal==1.4.1
 multidict==4.7.5
+openpyxl==3.0.3
 pymongo==3.10.1
 typing-extensions==3.7.4.2
 websockets==8.0.2
